hphp/hack/test/typecheck/reactive/parse_multiple4.php.exp
File "parse_multiple4.php", line 4, characters 3-15:
Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. (Parsing[1002])
